Added application.properties, OpenAiEmbeddingService, PgVectorStore, TestOpenAIKey